--- a/src/main/resources/templates/clienteMenu.html
+++ b/src/main/resources/templates/clienteMenu.html
@@ -79,6 +79,6 @@
       </div>
     </div>
   </div>
-  <script th:src="${/js/bootstrap.min.js}"></script>
+  <script th:src="@{/js/bootstrap.min.js}"></script>
 </body>
 </html>
