Cambio cards de restaurantes y productos

--- a/src/main/resources/static/css/cliente.css
+++ b/src/main/resources/static/css/cliente.css
@@ -2,7 +2,10 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: sans-serif;
+    text-decoration: none;
+    outline: none;
+    border: none;
   }
 
 #imagen{
@@ -42,12 +45,42 @@
 
 }
 
-hr {
-    margin-top:0px;
-    border: 5px solid black;
-    border-radius: 5px;
+.head-menu {
+    margin-top: 60px;
+    margin-left: 18px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.head-menu h1 {
+    margin-bottom: 18px;
+    font-size: 30px;
+}
+.head-menu div {
+    height: 13px;
+    width: 100%;
     background-color: black;
-  }
+    border-radius: 15px;
+    margin-bottom: 18px;
+}
 .card {
     margin: 20px 0 0 0;
+    border: 1px solid black;
+    box-shadow: 6px 6px grey;
+    font-size:12px;
+}
+
+.add-btn {
+    width: auto;
+    font-size: 13px;
+    height: 26px;
+    padding: 0 13px;
+    border-radius: 15px;
+    background-color: #f53339;
+    color: white;
+}
+
+.add-btn:hover {
+    background-color: rgb(165, 56, 56);
+    cursor: pointer;
 }
