--- a/src/main/resources/templates/cuenta.html
+++ b/src/main/resources/templates/cuenta.html
@@ -153,12 +153,12 @@
 
 
 <!-- MDBootstrap V5 -->
-<script th:src="${/js/mdb.min.js}" ></script>
+<script th:src="@{/js/mdb.min.js}" ></script>
 
 <!-- fslightbox -->
-<script th:src="${/js/fslightbox.js}" ></script>
+<script th:src="@{/js/fslightbox.js}" ></script>
 
 <!-- General scripts -->
-<script th:src="${/js/main.js}" ></script>
+<script th:src="@{/js/main.js}" ></script>
 </body>
 </html>
