--- a/src/main/resources/templates/cuentaBuscador.html
+++ b/src/main/resources/templates/cuentaBuscador.html
@@ -46,7 +46,7 @@
                 </div>
                 <span class="poppins-regular font-weight-bold" th:text="${usuario.adminname}"></span>
                 <div class="text-center full-box">
-                    <a href="#" class="btn btn-info btn-sm w-100"><i class="fas fa-user-cog fa-fw"></i> &nbsp; Mi cuenta</a>
+                    <a th:href="@{'/cuentaBuscador.html/' + ${usuario.adminId}}" class="btn btn-info btn-sm w-100"><i class="fas fa-user-cog fa-fw"></i> &nbsp; Mi cuenta</a>
                 </div>
 
                 <form class="full-box" action="">
