--- a/src/main/resources/templates/productos.html
+++ b/src/main/resources/templates/productos.html
@@ -19,6 +19,8 @@
 
     <!-- General Styles -->
     <link rel="stylesheet" th:href="@{/css/style.css}">
+
+    <link rel="stylesheet" th:href="@{/css/productos.css}">
     <style type="text/css">
         .container-fluid {
             border-top: 1px solid #E1E1E1;
@@ -99,21 +101,35 @@
         </div>
     </div>
 
+    <div class="container-fluid">
+        <div class="row">
 
-    <div class="container-cards full-box" style="padding-bottom: 40px;">
+            <div class="col-md-4" th:each="producto:${productos}">
+                <div class="card">
+                    <div class="card-image"></div>
+                    <div class="card-body">
+                        <h2 th:text="${producto.name}">Pedido 1</h2>
+                        <p th:text="${producto.description}"></p>
+                    </div>
+                    <div class="card-stats">
+                        <div class="stat">
+                            <div class="value" th:text="${producto.stock}"></div>
+                            <div class="type">Stock</div>
+                        </div>
+                        <div class="stat border">
+                            <div class="value" th:text="'$' + ${producto.price}"></div>
+                            <div class="type">Costo</div>
+                        </div>
+                        <div class="stat details">
+                            <i class="fas fa-hand-pointer fa-2x"></i>
+                            <a th:href="@{'/productoDetalles.html/'+ ${usuario.adminId} + '/' + ${restaurante.idrest} + '/' + ${producto.productId}}" class="detalles type my-3">Mas detalles</a>
 
-        <div class="card shadow-1-strong" th:each="producto:${productos}">
-            <img class="card-img-top" th:src="@{/assets/platillos/productos.jpg}" alt="nombre_restaurante">
-            <div class="card-body text-center">
-                <h5 class="card-title font-weight-bold" th:text="${producto.name}"></h5>
-                <p class="card-text lead"><span class="badge bg-secondary" th:text="'Stock: ' + ${producto.stock}"></span></p>
-
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="card-body text-center">
-                <a th:href="@{'/productoDetalles.html/' + ${usuario.adminId} + '/' + ${restaurante.idrest} + '/' + ${producto.productId}}" class="btn btn-info btn-sm"><i class="fas fa-utensils fa-fw"></i> &nbsp; Detalles</a>
-            </div>
+
         </div>
-
     </div>
 
 
