--- a/src/main/resources/templates/css/style.css
+++ b/src/main/resources/templates/css/style.css
@@ -261,10 +261,10 @@ body,html{
 
 
 	34%{
-		background-image: url('../assets/img/banner_2.jpg');
+		background-image: url('assets/img/banner_2.jpg');
 	}
 	66%{
-		background-image: url('../assets/img/banner_2.jpg');
+		background-image: url('assets/img/banner_2.jpg');
 	}
 
 
