Diseño de perfil de usuario en el buscador mejorado

--- a/src/main/resources/templates/cuentaBuscador.html
+++ b/src/main/resources/templates/cuentaBuscador.html
@@ -20,6 +20,8 @@
     <!-- General Styles -->
     <link rel="stylesheet" th:href="@{/css/style.css}">
 
+    <link rel="stylesheet" th:href="@{/css/cuenta.css}">
+
 </head>
 
 <body>
@@ -63,73 +65,88 @@
 <div class="container container-web-page">
     <h3 class="font-weight-bold poppins-regular text-uppercase">Identificacion Usuario</h3>
     <hr>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12 col-lg-5">
-                <!--cover-->
-                <figure class="full-box">
-                    <img class="img-fluid" th:src="@{/assets/img/user01.png}" alt="Usuario">
-                </figure>
 
-            </div>
-            <div class="col-12 col-lg-7">
+    <div class="container">
+        <div class="card">
+            <div class="additional" id="additional">
+                <div class="user-card">
+                    <div class="col-12 col-lg-5">
+                        <!--cover-->
+                        <figure class="full-box">
+                            <img class="perfilimg center img-fluid" th:src="@{/assets/img/user01.png}" alt="Usuario">
+                        </figure>
 
+                    </div>
+                </div>
+                <div class="more-info">
+                    <h1>Actualización de usuario</h1>
+                    <div class="form-input mb-4" >
 
-                <!-- Modificar cuenta -->
-                <form class="div-bordered" action="" style="padding: 15px;" >
-                    <fieldset id="campo" disabled="true">
+                        <span class="text-light lead font-weight-bold">Nombre:</span>
+                        <input type="text"  value="" class="form-control text-center"
+                               id="actInNameAccount" th:placeholder="${usuario.adminname}" required pattern="[a-zA-z0-9áéíóúÁÉÍÓÚñÑ ]{1,50}" maxlength="50" data-toggle="tooltip" data-placement="top" title="Nombre y Apellido" >
 
-                        <div class="form-input mb-4" >
-
-                            <span class="text-info lead font-weight-bold">Nombre:</span>
-                            <input type="text"  value="" class="form-control text-center"
-                                   id="InNameAccount" th:placeholder="${usuario.adminname}" required="" pattern="[a-zA-z0-9áéíóúÁÉÍÓÚñÑ ]{1,50}" maxlength="50" data-toggle="tooltip" data-placement="top" title="Nombre y Apellido" >
-
-                        </div>
-
-                        <div class="form-input mb-4">
-
-                            <span class="text-info lead font-weight-bold">Correo electrónico:</span>
-
-                            <input type="text" value="" class="form-control text-center"
-                                   id="inp_correo" th:placeholder="${usuario.admincorreo}" required="" pattern="[a-zA-z0-9áéíóúÁÉÍÓÚñÑ@. ]{1,50}" maxlength="50" data-toggle="tooltip" data-placement="top" title="escribir correo" >
-
-                        </div>
-
-                        <div class="form-input mb-4">
-
-                            <span class="text-info lead font-weight-bold">Contraseña:</span>
-
-                            <input type="text" value="" class="form-control text-center"
-                                   id="inpContraseña" th:placeholder="${usuario.admincontrasenia}" required="" pattern="[a-zA-z0-9áéíóúÁÉÍÓÚñÑ ]{1,50}" maxlength="50" data-toggle="tooltip" data-placement="top" title="escribir contraseña" >
-
-                        </div>
-                    </fieldset>
-
+                    </div>
 
                     <div class="form-input mb-4">
 
-                        <span class="text-info lead font-weight-bold">Identificacion en la pagina:</span>
+                        <span class="text-light lead font-weight-bold">Correo electrónico:</span>
 
                         <input type="text" value="" class="form-control text-center"
-                               id="inp_user" disabled="true" th:placeholder="${usuario.adminId}" required="" pattern="[a-zA-z0-9áéíóúÁÉÍÓÚñÑ ]{1,50}" maxlength="50" data-toggle="tooltip" data-placement="top" title="escribir usuario" >
+                               id="actinp_correo" th:placeholder="${usuario.admincorreo}" required pattern="[a-zA-z0-9áéíóúÁÉÍÓÚñÑ@. ]{1,50}" maxlength="50" data-toggle="tooltip" data-placement="top" title="escribir correo" >
+
                     </div>
 
+                    <div class="form-input mb-4">
+
+                        <span class="text-light lead font-weight-bold">Contraseña:</span>
+
+                        <input type="text" value="" class="form-control text-center"
+                               id="actinpContraseña" th:placeholder="${usuario.admincontrasenia}" required pattern="[a-zA-z0-9áéíóúÁÉÍÓÚñÑ ]{1,50}" maxlength="50" data-toggle="tooltip" data-placement="top" title="escribir contraseña" >
+
+                    </div>
                     <div class="row">
+                        <div class="col-6 col-md-6 text" >
 
-                        <div class="col-12 col-md-6 text" >
-
-                            <button type="submit" id="actualizar"
-                                    onclick="document.getElementById('campo').disabled = false" class="btn btn-info btn-sm"><i class="fas fa-sync fa-fw" title="Actualice datos del restaurante"></i> &nbsp; Actualizar</button>
+                            <input type="submit" id="confirmar_actualizar" class="btn btn-info btn-sm" value="confirmar actualizacion"></input>
                         </div>
-                        <div class="col-12 col-md-6 text">
-                            <a th:href="@{/login.html}"class="btn btn-raised btn-primary btn-sm w-100" title="cerrar sesion"><i class="fas fa-door-open fa-fw"></i> &nbsp; Cerrar sesión</a>
+
+                        <div class="col-6 col-md-6 text" >
+
+                            <button type="submit" id="volver"
+                                    onclick="document.getElementById('additional').style.width='40%'" class="btn btn-danger btn-sm"><i class="fas fa-sync fa-fw" title="Volver a datos del cliente"></i> &nbsp; volver</button>
                         </div>
                     </div>
-                </form>
+                </div>
+            </div>
+            <div class="general">
+                <h1>Datos de usuario</h1>
+
+                <span class="text-dark lead font-weight-bold">Nombre:</span>
+                <p class="dato" th:text="${usuario.adminname}"></p>
+
+                <span class="text-dark lead font-weight-bold">Correo electrónico:</span>
+                <p class="dato" th:text="${usuario.admincorreo}"></p>
+
+                <span class="text-dark lead font-weight-bold">Contraseña:</span>
+                <p class="dato" th:text="${usuario.admincontrasenia}"></p>
+
+                <span class="text-dark lead font-weight-bold">Identificacion en la pagina:</span>
+                <p class="dato" th:text="${usuario.adminId}"></p>
+
+                <div class="row">
+                    <div class="col-6 col-md-6 text" >
+
+                        <button type="submit" onclick="document.getElementById('additional').style.width='100%'" id="actualizar" class="btn btn-info btn-sm"><i class="fas fa-sync fa-fw" title="Ver actualizacion de cliente"></i> &nbsp; Actualizar</button>
+                    </div>
+                    <div class="col-6 col-md-6 text">
+                        <a th:href="@{/login.html}"class="btn btn-raised btn-primary btn-sm w-100" title="cerrar sesion"><i class="fas fa-door-open fa-fw"></i> &nbsp; Cerrar sesión</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+
 </div>
 
 
