--- a/src/main/resources/templates/estadisticas.html
+++ b/src/main/resources/templates/estadisticas.html
@@ -6,7 +6,7 @@
     <title>UN5</title>
 
     <!-- Normalize V8.0.1 -->
-    <link rel="stylesheet" th:href="@{/css/normalize.css}">
+    <link rel="stylesheet" href="css/normalize.css">
 
     <!-- MDBootstrap V5 -->
     <link rel="stylesheet" th:href="@{/css/mdb.min.css}">
