--- a/src/main/resources/templates/cuentaBuscador.html
+++ b/src/main/resources/templates/cuentaBuscador.html
@@ -20,6 +20,7 @@
     <!-- General Styles -->
     <link rel="stylesheet" th:href="@{/css/style.css}">
 
+    <!-- Card Styles -->
     <link rel="stylesheet" th:href="@{/css/cuenta.css}">
 
 </head>
@@ -48,7 +49,7 @@
                 </div>
                 <span class="poppins-regular font-weight-bold" th:text="${usuario.adminname}"></span>
                 <div class="text-center full-box">
-                    <a th:href="@{'/cuentaBuscador.html/' + ${usuario.adminId}}" class="btn btn-info btn-sm w-100"><i class="fas fa-user-cog fa-fw"></i> &nbsp; Mi cuenta</a>
+                    <a href="#" class="btn btn-info btn-sm w-100"><i class="fas fa-user-cog fa-fw"></i> &nbsp; Mi cuenta</a>
                 </div>
 
                 <form class="full-box" action="">
@@ -68,8 +69,17 @@
 
     <div class="container">
         <div class="card">
+
             <div class="additional" id="additional">
                 <div class="user-card">
+
+                    <div th:if="${param.success}">
+                        <dialog id="ms" open>
+                            <p>Has actualizado tu cuenta correctamente</p>
+                            <button class="btn btn-raised btn-primary btn-sm w-100" id="close" onclick="document.getElementById('ms').close()">Ok!</button>
+                        </dialog>
+                    </div>
+
                     <div class="col-12 col-lg-5">
                         <!--cover-->
                         <figure class="full-box">
@@ -79,46 +89,58 @@
                     </div>
                 </div>
                 <div class="more-info">
+
+                    <!-- Funcionalidad de actualizacion de datos de usuario -->
                     <h1>Actualización de usuario</h1>
-                    <div class="form-input mb-4" >
+                    <form th:action="@{'/cuentaBuscador.html/' + ${usuario.adminId}}" th:object="${usuario}" method="POST" >
+                        <div class="form-group mb-4" >
 
-                        <span class="text-light lead font-weight-bold">Nombre:</span>
-                        <input type="text"  value="" class="form-control text-center"
-                               id="actInNameAccount" th:placeholder="${usuario.adminname}" required pattern="[a-zA-z0-9áéíóúÁÉÍÓÚñÑ ]{1,50}" maxlength="50" data-toggle="tooltip" data-placement="top" title="Nombre y Apellido" >
+                            <label for="name" class="text-light lead font-weight-bold">Nombre:</label>
+                            <input type="text"  value="" class="form-control text-center"
+                                   th:field="*{adminname}" id="name" th:placeholder="${usuario.adminname}" required pattern="[a-zA-z0-9áéíóúÁÉÍÓÚñÑ ]{1,50}" maxlength="50" data-toggle="tooltip" data-placement="top" title="Nombre y Apellido" >
 
-                    </div>
-
-                    <div class="form-input mb-4">
-
-                        <span class="text-light lead font-weight-bold">Correo electrónico:</span>
-
-                        <input type="text" value="" class="form-control text-center"
-                               id="actinp_correo" th:placeholder="${usuario.admincorreo}" required pattern="[a-zA-z0-9áéíóúÁÉÍÓÚñÑ@. ]{1,50}" maxlength="50" data-toggle="tooltip" data-placement="top" title="escribir correo" >
-
-                    </div>
-
-                    <div class="form-input mb-4">
-
-                        <span class="text-light lead font-weight-bold">Contraseña:</span>
-
-                        <input type="text" value="" class="form-control text-center"
-                               id="actinpContraseña" th:placeholder="${usuario.admincontrasenia}" required pattern="[a-zA-z0-9áéíóúÁÉÍÓÚñÑ ]{1,50}" maxlength="50" data-toggle="tooltip" data-placement="top" title="escribir contraseña" >
-
-                    </div>
-                    <div class="row">
-                        <div class="col-6 col-md-6 text" >
-
-                            <input type="submit" id="confirmar_actualizar" class="btn btn-info btn-sm" value="confirmar actualizacion"></input>
                         </div>
 
-                        <div class="col-6 col-md-6 text" >
+                        <div class="form-group mb-4">
 
-                            <button type="submit" id="volver"
-                                    onclick="document.getElementById('additional').style.width='40%'" class="btn btn-danger btn-sm"><i class="fas fa-sync fa-fw" title="Volver a datos del cliente"></i> &nbsp; volver</button>
+                            <label for="email" class="text-light lead font-weight-bold">Correo electrónico:</label>
+
+                            <input type="text" value="" class="form-control text-center"
+                                   th:field="*{admincorreo}" id="email" th:placeholder="${usuario.admincorreo}" required pattern="[a-zA-z0-9áéíóúÁÉÍÓÚñÑ@. ]{1,50}" maxlength="50" data-toggle="tooltip" data-placement="top" title="escribir correo" >
+
                         </div>
-                    </div>
+
+                        <div class="form-group mb-4">
+
+                            <label for="password" class="text-light lead font-weight-bold">Contraseña:</label>
+
+                            <input type="text" value="" class="form-control text-center"
+                                   th:field="*{admincontrasenia}" id="password" th:placeholder="${usuario.admincontrasenia}" required pattern="[a-zA-z0-9áéíóúÁÉÍÓÚñÑ ]{1,50}" maxlength="50" data-toggle="tooltip" data-placement="top" title="escribir contraseña" >
+
+                        </div>
+
+                        <input type="hidden" th:field="*{adminId}">
+
+                        <div class="row">
+                            <div class="col-6 col-md-6 text" >
+
+                                <button type="submit" id="confirmar_actualizar" class="btn btn-info btn-sm btn-success" >confirmar actualizacion</button>
+                            </div>
+
+                            <div class="col-6 col-md-6 text" >
+
+                                <input type="button" id="volver"
+                                        onclick="document.getElementById('additional').style.width='40%';" class="btn btn-danger btn-sm" value="volver"></input>
+                            </div>
+                        </div>
+                    </form>
+
+
+
                 </div>
             </div>
+
+            <!--Datos de perfil del usuario-->
             <div class="general">
                 <h1>Datos de usuario</h1>
 
@@ -137,7 +159,7 @@
                 <div class="row">
                     <div class="col-6 col-md-6 text" >
 
-                        <button type="submit" onclick="document.getElementById('additional').style.width='100%'" id="actualizar" class="btn btn-info btn-sm"><i class="fas fa-sync fa-fw" title="Ver actualizacion de cliente"></i> &nbsp; Actualizar</button>
+                        <button onclick="document.getElementById('additional').style.width='100%'" id="actualizar" class="btn btn-info btn-sm"><i class="fas fa-sync fa-fw" title="Ver actualizacion de cliente"></i> &nbsp; Actualizar</button>
                     </div>
                     <div class="col-6 col-md-6 text">
                         <a th:href="@{/login.html}"class="btn btn-raised btn-primary btn-sm w-100" title="cerrar sesion"><i class="fas fa-door-open fa-fw"></i> &nbsp; Cerrar sesión</a>
@@ -145,9 +167,12 @@
                 </div>
             </div>
         </div>
+
     </div>
 
 </div>
+
+
 
 
 <!-- Footer -->
@@ -155,7 +180,6 @@
     <div class="container">
     </div>
 </footer>
-
 
 <!-- MDBootstrap V5 -->
 <script th:src="@{/js/mdb.min.js}" ></script>
@@ -165,5 +189,6 @@
 
 <!-- General scripts -->
 <script th:src="@{/js/main.js}" ></script>
+
 </body>
 </html>
